--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style rel="stylesheet" href="style.css"></style>
+    <link rel="stylesheet" href="style.css">
     <title>Week 7 Monday Homework</title>
 </head>
 <body>
     <main>
         <h1>CSS Show-and-Tell</h1>
+        <p>I decided to investigate the angle property of css/html.</p>
+        <h2>It allows you to rotate text or other elements in the browser to your desired angle.</h2>
     </main>
 </body>
 </html>
