Finished with the show-and-tell assignment

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <main>
-        <h1>CSS Show-and-Tell</h1>
-        <p>I decided to investigate the angle property of css/html.</p>
+        <h1><u>CSS Show-and-Tell</u></h1>
+        <p>I decided to investigate the angle/transform property of css/html.</p>
         <h2>It allows you to rotate text or other elements in the browser to your desired angle.</h2>
+        <h3>It is mildly interesting.</h3>
     </main>
 </body>
 </html>
